Closed Bug 34416 Opened 26 years ago Closed 25 years ago

install target overwritten in Makefile.in's instead of using CHROME vars.

Categories

(SeaMonkey :: Build Config, defect, P3)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: axel, Assigned: sspitzer)

Details

(Keywords: arch)

In mozilla/config/rules.mk and rules.mak we have a scheme to install chrome files (look for CHROME_DIR, CHROME_CONTENT et al) , which are not used in the following Makefile.in's, please check makefile.win as well. ... indicates "most of the makefiles beneath", I made up my mind not to list them all editor/ui/composer/... editor/ui/dialogs/... extensions/irc/Makefile.in extensions/irc/xul/... extensions/psm-glue/res/... extensions/wallet/cookieviewer/... extensions/wallet/editor/... extensions/wallet/signonviewer/... extensions/wallet/src/Makefile.in extensions/wallet/walletpreview/... extensions/xmlterm/ui/... caps/src/Makefile.in docshell/base/Makefile.in profile/pref-migrator/resources/... profile/resources/... xpinstall/res/... layout/html/forms/src/Makefile.in xpfe/browser/resources/... xpfe/components/prefwindow/resources/... xpfe/components/timebomb/resources/... xpfe/components/filepicker/res/... xpfe/components/console/resources/... xpfe/global/resources/... mailnews/.../resources/... quite a few here, very scattered, basically all with resources in the path. These are not all occurences of overwritten install targets, but only those concerning chrome. Axel
To make matters worse, take a look at bug 26020.
Anyone CC'd on this bug might find this example useful: /xpfe/components/bookmarks/resources/Makefile.in, line 31 /xpfe/components/bookmarks/resources/makefile.win, line 27 I'll fix the misuse in layout/html/forms/src that I added. :)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Sounds like we have our first volunteer. :) Once you've made your fixes, reassign the bug to the next person in line.
Assignee: cls → pollmann
Fixed extensions/xmlterm/ui/Makefile.in to use CHROME vars. svn
Summary: install target overwritten in Makefile.in's instead of using CHROME vars → install target overwritten in Makefile.in's instead of using CHROME vars.
My fix is ready for Win and X - Mac should be okay already. Waiting for tree to open.
Status: NEW → ASSIGNED
Whiteboard: fix in hand [forms]
Target Milestone: --- → M16
mass re-assign of all bugs where i was listed as the qa contact
QA Contact: cyeh → chofmann
Hmm, much redness lately. Fixes for layout/html/forms are in. Passing bug on to Kathy for editor/ui/composer/locale/en-US.
Whiteboard: fix in hand [forms]
reassigning...
Assignee: pollmann → brade
Status: ASSIGNED → NEW
Checked in fixes to xpfe/components/console; thanks to Axel Hecht for the diffs.
the makefiles under mozilla/themes and ns/themes will need to be fixed too.
Reassigned to Phil Peterson for mailnews cleanup. brade cleaned up editor. Axel
Assignee: brade → phil
phil isn't the right person for this. I'll take it and re-assign once the mailnews stuff is done.
Assignee: phil → sspitzer
not a m16 blocker, moving to m17.
Status: NEW → ASSIGNED
Target Milestone: M16 → M17
How is this going? Marking Arch All/All.
Keywords: arch
OS: Solaris → All
Hardware: Sun → All
Anyone on the CC list want this one? Seth is on sabbatical and won't be fixing this for this release...
Marking fixed as the jar packaging landing made this bug moot.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.