xmlterm changes only. Changed xmlterm/ui/Makefile.in to use CHROME vars to handle content/skin resources (bug 34416); eliminated directories xmlterm/ui/content and xmlterm/ui/skin.